--- a/index.html
+++ b/index.html
@@ -25,5 +25,15 @@
             <li><a href="">Contact</a> </li>
         </ol>
     </div>
+    <div class="home">
+      <div class="word">
+        <h5>Get started</h5>
+        <h1>Make More Time From The Work Matters Most</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque quod saepe labore incidunt velit sunt provident voluptatum blanditiis corrupti illum laboriosam adipisci delectus corporis, quia eum a aut excepturi asperiores.</p>
+        <button >Call Now</button>
+        <button>E Mail</button>
+      </div>
+       <img src="images/time.png" alt="Time" title="time" >
+    </div>
 </body>
 </html>
