--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Project 1</title>
 </head>
 <body>
@@ -25,7 +26,7 @@
             <li><a href="">Contact</a> </li>
         </ol>
     </div>
-    <div class="home">
+    <div class="home" id="Home" >
       <div class="word">
         <h5>Get started</h5>
         <h1>Make More Time From The Work Matters Most</h1>
@@ -34,6 +35,43 @@
         <button>E Mail</button>
       </div>
        <img src="images/time.png" alt="Time" title="time" >
+    </div>
+    <div id="Service">
+        <div class="paragraph">
+            <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsum odio velit labore perspiciatis perferendis dicta, consequatur earum fugit ut, dus provident corrupti vero nam fuga.</h1>
+
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laborum sed quia impedit itaque dolore tempora. Quae, excepturi recusandae repellendus vero, animi adipisci, asperiores sequi et fugit ullam quidem quod cupiditate!</p>
+            <button>Services</button>
+        </div>
+        <div class="cards">
+        <div class="first-card">
+            <span class="card-1">
+                <span>                <i class="fa-solid fa-house-chimney"></i>
+                </span>
+                <h3>Customer Support</h3>
+                <p>Lorem ipsum dolor sit amet</p>
+            </span>
+            <span class="card-2">
+                    <span>                <i class="fa-solid fa-house-chimney"></i>
+                </span>
+                <h3>Customer Support</h3>
+                <p>Lorem ipsum dolor sit amet</p>
+            </span>
+        </div>
+           <div class="second-card">
+            <span class="card-3">
+                <span>                <i class="fa-solid fa-house-chimney"></i>
+                </span>
+                <h3>Customer Support</h3>
+                <p>Lorem ipsum dolor sit amet</p>
+            </span>
+            <span class="card-4">
+                <span>                <i class="fa-solid fa-house-chimney"></i>
+                </span>
+            <h3>Customer Support</h3>
+            <p>Lorem ipsum dolor sit amet</p>
+        </span>
+           </div>
     </div>
 </body>
 </html>
