--- a/index.html
+++ b/index.html
@@ -73,5 +73,15 @@
         </span>
            </div>
     </div>
+    <div id="About">
+        <img src="images/team work.jpg" alt="Team Work" title="Team Work">
+        <div class="context">
+            <h5>Watch Video</h5>
+            <h1>Make More Time From The Work Matters Most</h1>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis dolore, animi repellendus facere nesciunt similique reprehenderit commodi natus quaerat accusamus sunt odit enim repudiandae culpa minus ipsa, pariatur voluptatibus deleniti!</p>
+            <button> Call Now</button>
+            <button>E Mail</button>
+        </div>
+    </div>
 </body>
 </html>
