--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       </div>
        <img src="images/time.png" alt="Time" title="time" >
     </div>
+    <!-- Service  -->
     <div id="Service">
         <div class="paragraph">
             <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque ipsum odio velit labore perspiciatis perferendis dicta, consequatur earum fugit ut, dus provident corrupti vero nam fuga.</h1>
@@ -73,6 +74,7 @@
         </span>
            </div>
     </div>
+     <!-- About -->
     <div id="About">
         <img src="images/team work.jpg" alt="Team Work" title="Team Work">
         <div class="context">
@@ -81,6 +83,44 @@
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Corporis dolore, animi repellendus facere nesciunt similique reprehenderit commodi natus quaerat accusamus sunt odit enim repudiandae culpa minus ipsa, pariatur voluptatibus deleniti!</p>
             <button> Call Now</button>
             <button>E Mail</button>
+        </div>
+    </div>
+    <!-- Portfolio  -->
+    <div id="Portfolio">
+        <div class="title">  
+            <div class="title1">
+                <h4>Portfolio</h4>
+                <h2>Lorem ipsum dolor sit amet</h2>
+            </div>
+            <div class="title2">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic molestias veniam recusandae magni deleniti quia iure quo vitae alias totam quis, odio officia dicta distinctio assumenda, fugiat aut, ut illum.</p>
+            </div>
+        </div>
+        <div class="cards">
+            <span><i class="fa-solid fa-arrow-left"></i></span>
+            <div class="card1">
+                <img src="images/team work.jpg" alt="">
+               <h3>Title</h3> 
+               <p>Some quick example text to build</p>
+            </div>
+            <div class="card2">
+                <img src="images/team work.jpg" alt="">
+                <h3>Title</h3> 
+                <p>Some quick example text to build</p>
+                <span><i class="fa-solid fa-circle"></i></span>
+                <span><i class="fa-solid fa-circle"></i></span>
+                <span><i class="fa-solid fa-circle"></i></span>
+                <span><i class="fa-solid fa-circle"></i></span>
+                <span><i class="fa-solid fa-circle"></i></span>
+                <span><i class="fa-solid fa-circle"></i></span>
+                <span><i class="fa-solid fa-circle"></i></span>
+            </div>
+             <div class="card3">
+                <img src="images/team work.jpg" alt="">
+                <h3>Title</h3> 
+                <p>Some quick example text to build</p>
+             </div>
+             <span><i class="fa-solid fa-arrow-right"></i></span>
         </div>
     </div>
 </body>
