--- a/index.html
+++ b/index.html
@@ -123,5 +123,63 @@
              <span><i class="fa-solid fa-arrow-right"></i></span>
         </div>
     </div>
+    <!-- Portfolio finished -->
+    <!-- Team  -->
+    <div id="Team">
+        <h4>Our Team</h4>
+        <h2>Meet Our Team of Expert</h2>
+        <div class="cards">
+            <div class="card1">
+                <img src="images/cele 1.jpg" alt="">
+                <h3>Card title</h3>
+                <p>This is a wider card1 with supporting text below as a natural lead in to additional content. THis content is a little bit longer.</p>
+                <footer>Last updated 3 hours ago</footer>
+                <span><i class="fa-brands fa-facebook"></i></span>
+                <span><i class="fa-brands fa-twitter"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
+                <span><i class="fa-brands fa-githab"></i></span>
+                <span><i class="fa-brands fa-github"></i></span> 
+          </div>
+            <div class="card2">
+                <img src="images/cele 2.jpg" alt="">
+                <h3>Card title</h3>
+                <p>This is a wider card1 with supporting text below as a natural lead in to additional content. THis content is a little bit longer.</p>
+                <footer>Last updated 3 hours ago</footer>
+                <span><i class="fa-brands fa-facebook"></i></span>
+                <span><i class="fa-brands fa-twitter"></i></span>
+                <span><i class="fa-brands fa-instagram"></i></span>
+                <span><i class="fa-brands fa-githab"></i></span>
+                <span><i class="fa-brands fa-github"></i></span> 
+                
+            </div>
+        </div>
+    </div>
+    <div class="MeetOurTeam">
+        <h5>Testimonial</h5>    
+        <h3>Meet Our Team of Expert</h3>
+        <div class="cards">
+            <div class="card1">
+                <span></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas esse blanditiis ipsam dicta repellendus distinctio debitis illum laudantium, illo, numquam labore non. Suscipit ipsum aliquam error labore, fugiat non eos!</p>
+                <img src="images/cele 2.jpg" alt="Profile">
+                <h3>Kaung Myat Htun</h3>
+                <h4>17 Aug 2019</h4>
+            </div>
+            <div class="card2">
+                <span></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas esse blanditiis ipsam dicta repellendus distinctio debitis illum laudantium, illo, numquam labore non. Suscipit ipsum aliquam error labore, fugiat non eos!</p>
+                <img src="images/cele 2.jpg" alt="Profile">
+                <h3>Kaung Myat Htun</h3>
+                <h4>17 Aug 2019</h4>
+            </div>
+            <div class="card3">
+                <span></span>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas esse blanditiis ipsam dicta repellendus distinctio debitis illum laudantium, illo, numquam labore non. Suscipit ipsum aliquam error labore, fugiat non eos!</p>
+                <img src="images/cele 2.jpg" alt="Profile">
+                <h3>Kaung Myat Htun</h3>
+                <h4>17 Aug 2019</h4>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
