add two cards in Service

--- a/index.html
+++ b/index.html
@@ -149,9 +149,32 @@
                 <span><i class="fa-brands fa-twitter"></i></span>
                 <span><i class="fa-brands fa-instagram"></i></span>
                 <span><i class="fa-brands fa-githab"></i></span>
-                <span><i class="fa-brands fa-github"></i></span> 
-                
+                <span><i class="fa-brands fa-github"></i></span>   
             </div>
+            </div>
+            <div class="cards-2">
+                <div class="card1">
+                    <img src="images/cele 1.jpg" alt="">
+                    <h3>Card title</h3>
+                    <p>This is a wider card1 with supporting text below as a natural lead in to additional content. THis content is a little bit longer.</p>
+                    <footer>Last updated 3 hours ago</footer>
+                    <span><i class="fa-brands fa-facebook"></i></span>
+                    <span><i class="fa-brands fa-twitter"></i></span>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                    <span><i class="fa-brands fa-githab"></i></span>
+                    <span><i class="fa-brands fa-github"></i></span> 
+              </div>
+                <div class="card2">
+                    <img src="images/cele 2.jpg" alt="">
+                    <h3>Card title</h3>
+                    <p>This is a wider card1 with supporting text below as a natural lead in to additional content. THis content is a little bit longer.</p>
+                    <footer>Last updated 3 hours ago</footer>
+                    <span><i class="fa-brands fa-facebook"></i></span>
+                    <span><i class="fa-brands fa-twitter"></i></span>
+                    <span><i class="fa-brands fa-instagram"></i></span>
+                    <span><i class="fa-brands fa-githab"></i></span>
+                    <span><i class="fa-brands fa-github"></i></span>   
+                </div>
         </div>
     </div>
     <div class="MeetOurTeam">
