--- a/index.html
+++ b/index.html
@@ -204,5 +204,43 @@
             </div>
         </div>
     </div>
+    <div id="Pricing">
+        <div class="title">
+            <h5>Pricing</h5>
+            <h3>Choose THe Right Plan <br>For Your Business</h3>    
+        </div>
+        <div class="cards">
+            <div class="card1">
+                <h4>Basic <span>$100</span></h4>
+                <h5>Basic Prince <span>New Plan</span></h5> 
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <button>Order Now</button>
+            </div>
+            <div class="card2">
+                <h4>Basic <span>$100</span></h4>
+                <h5>Basic Prince <span>New Plan</span></h5> <hr>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <button>Order Now</button>
+            </div>
+            <div class="card3">
+                <h4>Basic <span>$100</span></h4>
+                <h5>Basic Prince <span>New Plan</span></h5> 
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
+                <button>Order Now</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
