--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
                 </div>
         </div>
     </div>
+    <!-- Meet Team  -->
     <div class="MeetOurTeam">
         <h5>Testimonial</h5>    
         <h3>Meet Our Team of Expert</h3>
@@ -204,6 +205,7 @@
             </div>
         </div>
     </div>
+    <!-- Princing -->
     <div id="Pricing">
         <div class="title">
             <h5>Pricing</h5>
@@ -240,6 +242,42 @@
                 <p>Lorem ipsum dolor sit ament <span><i class="fa-solid fa-check"></i></span></p>
                 <button>Order Now</button>
             </div>
+        </div>
+    </div>
+    <!-- Contact  -->
+    <div id="cards">
+        <div class="card1">
+            <h2>Get In Touch</h2>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Enim necessitatibus harum facilis repellendus. Fuga praesentium dignissimos laborum! Laboriosam et, quas, quaerat, soluta corrupti impedit modi vitae ipsa delectus cupiditate unde!</p>
+            <div class="icons">
+                <div class="icon1">
+                    <span><i class="fa-solid fa-map-location-dot"></i></span>
+                    <h4>Address</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+
+                </div>
+                <div class="icon2">
+                    <span><i class="fa-solid fa-phone"></i></span>
+                    <h4>Phone</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                </div>
+                <div class="icon3">
+                    <span><i class="fa-solid fa-envelope"></i></span>
+                    <h4>Email</h4>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+                </div>
+            </div>
+        </div>
+        <div class="card2">
+            <div class="mapouter"><div class="gmap_canvas"><iframe src="https://maps.google.com/maps?q=university%20of%20san%20francisco&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" id="gmap_canvas" frameborder="0" scrolling="no" style="width: 600px; height: 400px;"></iframe><a href="https://fnfmod.net" style="display:none">fnf mods</a><style>.mapouter{position:relative;text-align:right;height:400px;width:600px;}</style><a href="https://www.googlemapsiframegenerator.com" style="display:none">Google Maps Iframe Generator</a><style>.gmap_canvas{overflow:hidden;background:none!important;height:400px;width:600px;}</style></div></div>
+        </div>
+        <div class="card3">
+            <h4 >Send A Request</h3>
+                <p>Lorem ipsum dolor ammet</p>
+                <input type="text" placeholder="Email"><br>
+                <input type="text" placeholder="Phone"><br>
+                <textarea name="" id="" placeholder="Message" cols="35" rows="7"></textarea><br>
+                <button>Send Message</button>
         </div>
     </div>
 </body>
