Download and Footer

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
             <span>Nike</span>
            </div>
         <ol  >
-            <li> <a href="">Home</a> </li>
-            <li><a href="">Service</a></li>
-            <li><a href="">About</a> </li>
-            <li><a href="">Protfolio</a></li>
-            <li><a href=""> Team</a></li>
-            <li><a href="">Pricing</a> </li>
-            <li><a href="">Contact</a> </li>
+            <li> <a href="#Home">Home</a> </li>
+            <li><a href="#Service">Service</a></li>
+            <li><a href="#About">About</a> </li>
+            <li><a href="#Portfolio">Protfolio</a></li>
+            <li><a href="#Team"> Team</a></li>
+            <li><a href="#Pricing">Pricing</a> </li>
+            <li><a href="#cards">Contact</a> </li>
         </ol>
     </div>
     <div class="home" id="Home" >
@@ -279,6 +279,23 @@
                 <textarea name="" id="" placeholder="Message" cols="35" rows="7"></textarea><br>
                 <button>Send Message</button>
         </div>
+    </div>
+    <div class="introDownload">
+        <h3>Lorem ipsum dolor sit ament, <br>adipising elit.</h3>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Autem reiciendis nobis beatae in distinctio, iure unde fugit iste quidem, perspiciatis alias consequatur laudantium minima eius magni veniam placeat error id.</p>
+        <button><span><i class="fa-brands fa-apple"></i></span> Download</button>
+        <button><span><i class="fa-brands fa-google-play"></i></span> Download</button>
+        <footer>
+            <ol  >
+                <li> <a href="#Home">Home</a> </li>
+                <li><a href="#Service">Service</a></li>
+                <li><a href="#About">About</a> </li>
+                <li><a href="#Portfolio">Protfolio</a></li>
+                <li><a href="#Team"> Team</a></li>
+                <li><a href="#Pricing">Pricing</a> </li>
+                <li><a href="#cards">Contact</a> </li>
+            </ol>
+        </footer>
     </div>
 </body>
 </html>
