--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <title>Project 1</title>
-</head>
+</head>wZZ
 <body>
     <!-- logo and Menu  -->
     <div class="Menu">
